# geoconv

./: CMakeLists.txt  build.sh  compile_commands.json  env.cmake  test.sh
inc/: convert.h  coordinate.h  geoconv_version.h.in  types.h  utils.h
inc/utils/: parse_cmd.h
src/: convert.cpp  coordinate.cpp  main.cpp  types.cpp
src/utils/: parse_cmd.cpp
test/: test_dataset.cpp  test_dataset.h  test_geoconv.cpp  test_main.cpp
